--- a/tests/unattended/install-testing/pytest.ini
+++ b/tests/unattended/install-testing/pytest.ini
@@ -4,5 +4,6 @@ filterwarnings =
 markers =
     wazuh: tests to be executed on Wazuh hosts (does not include wazuh-clusterd test).
     wazuh_cluster: test for wazuh-clusterd it is meant to be executed on the master node if a wazuh cluster is configured.
+    wazuh_worker: test for wazuh cluster worker nodes. It is meant to be executed on the worker nodes.
     elastic: tests to be executed on Elastic hosts.
     kibana: tests to be executed on Kibana hosts.
