Fixed tabulation and comments

--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -96,6 +96,7 @@ jobs:
         uses: actions/checkout@v2
       - name: Unattended installation and test
         uses: './.github/actions/Docker/OracleLinux/8/'
+
   Debian_Jessie_unattended_install_test:
     runs-on: ubuntu-latest
     steps:
@@ -104,30 +105,10 @@ jobs:
       - name: Unattended installation and test
         uses: './.github/actions/Docker/Debian/Jessie/'
 
-#  Ubuntu_Xenial_unattended_install_test:
-#    runs-on: ubuntu-latest
-#    steps:
-#      - name: Check out code
-#        uses: actions/checkout@v2
-#      - name: Unattended installation and test
-#        uses: './.github/actions/Docker/Ubuntu/Xenial/'
-
-#  Ubuntu_Trusty_unattended_install_test:
-#    runs-on: ubuntu-latest
-#    steps:
-#      - name: Check out code
-#        uses: actions/checkout@v2
-#      - name: Unattended installation and test
-#        uses: './.github/actions/Docker/Ubuntu/Trusty/'
-
-
-
-
-
-#Fedora Linux 31 and later
-#openSUSE Tumbleweed, Leap 15.2 and later
-
-#Oracle Linux 6
-#Red Hat Enterprise Linux 6 ELS and later
-#Ubuntu trusty 14.04 and Xenial 16
-
+# TODO
+#
+# Fedora Linux 31 and later
+# OpenSUSE Tumbleweed, Leap 15.2 and later
+# Oracle Linux 6
+# Red Hat Enterprise Linux 6 ELS and later
+# Ubuntu trusty 14.04 and Xenial 16
