--- a/.gitignore
+++ b/.gitignore
@@ -28,4 +28,4 @@ unattended_installer/configurations*
 unattended_installer/config.yml
 unattended_installer/.vscode
 unattended_installer/configurations.tar
-unattended/unit/*.log
+tests/unattended/unit/*.log
