--- a/indexer/deb/debian/rules
+++ b/indexer/deb/debian/rules
@@ -127,7 +127,7 @@ override_dh_install:
 # -----------------------------------------------------------------------------
 
 override_dh_strip:
-	dh_strip --no-automatic-dbgsym
+	dh_strip
 
 # -----------------------------------------------------------------------------
 
