--- a/tests/unattended/install/pytest.ini
+++ b/tests/unattended/install/pytest.ini
@@ -6,4 +6,5 @@ markers =
     wazuh_cluster: test for wazuh-clusterd it is meant to be executed on the master node if a wazuh cluster is configured.
     wazuh_worker: test for wazuh cluster worker nodes. It is meant to be executed on the worker nodes.
     elastic: tests to be executed on Elastic hosts.
+    elastic_cluster: tests to be executed on Elastic hosts on distributed installations.
     kibana: tests to be executed on Kibana hosts.
