Change config dir

--- a/unattended_installer/config/kibana/kibana_unattended.yml
+++ b/unattended_installer/config/kibana/kibana_unattended.yml
@@ -5,8 +5,8 @@ elasticsearch.ssl.verificationMode: certificate
 elasticsearch.username: kibanaserver
 elasticsearch.password: kibanaserver
 elasticsearch.requestHeadersWhitelist: ["securitytenant","Authorization"]
-opendistro_security.multitenancy.enabled: true
-opendistro_security.readonly_mode.roles: ["kibana_read_only"]
+plugins.security.multitenancy.enabled: true
+plugins.security.readonly_mode.roles: ["kibana_read_only"]
 server.ssl.enabled: true
 server.ssl.key: "/etc/kibana/certs/kibana-key.pem"
 server.ssl.certificate: "/etc/kibana/certs/kibana.pem"
