--- a/unattended_installer/config/indexer/indexer_all_in_one.yml
+++ b/unattended_installer/config/indexer/indexer_all_in_one.yml
@@ -23,5 +23,5 @@ plugins.security.restapi.roles_enabled: ["all_access", "security_rest_api_access
 cluster.routing.allocation.disk.threshold_enabled: false
 node.max_local_storage_nodes: 3
 
-path.data: /var/lib/elasticsearch
-path.logs: /var/log/elasticsearch
+path.data: /var/lib/wazuh-indexer
+path.logs: /var/log/wazuh-indexer
