--- a/unattended_installer/config/certificate/config_aio.yml
+++ b/unattended_installer/config/certificate/config_aio.yml
@@ -1,10 +1,10 @@
 nodes:
-  elasticsearch:
-    name: elasticsearch
+  indexer:
+    name: indexer
     ip: 127.0.0.1
   wazuh_servers:
     name: filebeat
     ip: 127.0.0.1
-  kibana:
-    name: kibana
+  dashboard:
+    name: dashboard
     ip: 127.0.0.1
