--- a/dashboards/deb/debian/rules
+++ b/dashboards/deb/debian/rules
@@ -24,12 +24,12 @@ export DH_VERBOSE=1
 # This has to be exported to make some magic below work.
 export DH_OPTIONS
 
-export TARGET_DIR=${CURDIR}/debian/wazuh-dashboard
-export NAME=wazuh-dashboard
+export TARGET_DIR=${CURDIR}/debian/wazuh-dashboards
+export NAME=wazuh-dashboards
 export CONFIG_DIR=/etc/${NAME}
 export INSTALLATION_DIR=/usr/share/${NAME}
 export LOG_DIR=/var/log/${NAME}
-export DASHBOARD_FILE=wazuh-dashboard-base-linux-x64
+export DASHBOARD_FILE=wazuh-dashboards-base-linux-x64
 export USER=${NAME}
 export GROUP=${NAME}
 
@@ -58,7 +58,7 @@ override_dh_install:
 	mkdir -p ${TARGET_DIR}/etc/default
 
 	cp ${DASHBOARD_FILE}/etc/node.options ${TARGET_DIR}${CONFIG_DIR}
-	cp ${DASHBOARD_FILE}/etc/dashboard.yml ${TARGET_DIR}${CONFIG_DIR}
+	cp ${DASHBOARD_FILE}/etc/dashboards.yml ${TARGET_DIR}${CONFIG_DIR}
 	mv ${DASHBOARD_FILE}/* ${TARGET_DIR}${INSTALLATION_DIR}
 
 	cp ${TARGET_DIR}${INSTALLATION_DIR}/etc/custom_welcome/template.js.hbs ${TARGET_DIR}${INSTALLATION_DIR}/src/legacy/ui/ui_render/bootstrap/template.js.hbs
@@ -71,12 +71,12 @@ override_dh_install:
 	cp ${TARGET_DIR}${INSTALLATION_DIR}/etc/custom_welcome/Assets/Favicons/favicon-32x32.png ${TARGET_DIR}${INSTALLATION_DIR}/src/core/server/core_app/assets/favicons/favicon.ico
 
 
-	cp ${TARGET_DIR}${INSTALLATION_DIR}/etc/services/wazuh-dashboard.service ${TARGET_DIR}/etc/systemd/system/wazuh-dashboard.service 
-	cp ${TARGET_DIR}${INSTALLATION_DIR}/etc/services/wazuh-dashboard ${TARGET_DIR}/etc/systemd/system/${NAME}
+	cp ${TARGET_DIR}${INSTALLATION_DIR}/etc/services/wazuh-dashboards.service ${TARGET_DIR}/etc/systemd/system/wazuh-dashboards.service 
+	cp ${TARGET_DIR}${INSTALLATION_DIR}/etc/services/wazuh-dashboards ${TARGET_DIR}/etc/systemd/system/${NAME}
 	cp ${TARGET_DIR}${INSTALLATION_DIR}/etc/services/default ${TARGET_DIR}/etc/default/${NAME}
 
 	chmod 644 ${TARGET_DIR}/etc/systemd/system/${NAME}
-	chmod 644 ${TARGET_DIR}/etc/systemd/system/wazuh-dashboard.service 
+	chmod 644 ${TARGET_DIR}/etc/systemd/system/wazuh-dashboards.service 
 	chmod 644 ${TARGET_DIR}/etc/default/${NAME}
 
 	rm -rf ${TARGET_DIR}${INSTALLATION_DIR}/etc
@@ -85,8 +85,8 @@ override_dh_install:
 
 	tar -xf demo-certs.tar.gz
 
-	cp certs/demo-dashboard.pem ${TARGET_DIR}${CONFIG_DIR}/certs/wazuh-dashboard.pem
-	cp certs/demo-dashboard-key.pem ${TARGET_DIR}${CONFIG_DIR}/certs/wazuh-dashboard-key.pem
+	cp certs/demo-dashboard.pem ${TARGET_DIR}${CONFIG_DIR}/certs/wazuh-dashboards.pem
+	cp certs/demo-dashboard-key.pem ${TARGET_DIR}${CONFIG_DIR}/certs/wazuh-dashboards-key.pem
 	cp certs/root-ca.pem ${TARGET_DIR}${CONFIG_DIR}/certs/root-ca.pem
 	chmod 644 ${TARGET_DIR}${CONFIG_DIR}/certs/*
 
@@ -94,7 +94,7 @@ override_dh_install:
 
 	chown -R ${USER}:${GROUP} ${TARGET_DIR}${INSTALLATION_DIR}
 	chown -R ${USER}:${GROUP} ${TARGET_DIR}${CONFIG_DIR}
-	chown ${USER}:${GROUP} ${TARGET_DIR}/etc/systemd/system/wazuh-dashboard.service
+	chown ${USER}:${GROUP} ${TARGET_DIR}/etc/systemd/system/wazuh-dashboards.service
 	chown ${USER}:${GROUP} ${TARGET_DIR}/etc/systemd/system/${NAME}
 	chown ${USER}:${GROUP} ${TARGET_DIR}/etc/default/${NAME}
 
@@ -108,13 +108,13 @@ override_dh_fixperms:
 	chown -R "${NAME}":"${NAME}" "${TARGET_DIR}${INSTALLATION_DIR}"
 	chown -R "${NAME}":"${NAME}" ${TARGET_DIR}/etc/default/"${NAME}"
 	chown -R "${NAME}":"${NAME}" ${TARGET_DIR}/etc/systemd/system/"${NAME}"
-	chmod 750 ${TARGET_DIR}/etc/systemd/system/wazuh-dashboard
-	chmod 750 ${TARGET_DIR}/etc/default/wazuh-dashboard
-	chmod 640 "${TARGET_DIR}${CONFIG_DIR}"/dashboard.yml
+	chmod 750 ${TARGET_DIR}/etc/systemd/system/wazuh-dashboards
+	chmod 750 ${TARGET_DIR}/etc/default/wazuh-dashboards
+	chmod 640 "${TARGET_DIR}${CONFIG_DIR}"/dashboards.yml
 	chmod 750 "${TARGET_DIR}${CONFIG_DIR}"/certs
 	chmod 400 "${TARGET_DIR}${CONFIG_DIR}"/certs/*
 	chmod 640 "${TARGET_DIR}${CONFIG_DIR}"/node.options
-	chmod 640 ${TARGET_DIR}/etc/systemd/system/wazuh-dashboard.service
+	chmod 640 ${TARGET_DIR}/etc/systemd/system/wazuh-dashboards.service
 	find "${TARGET_DIR}${INSTALLATION_DIR}" -type d -exec chmod 750 {} \;
 	find "${TARGET_DIR}${INSTALLATION_DIR}" -type f -perm 644 -exec chmod 640 {} \;
 	find "${TARGET_DIR}${INSTALLATION_DIR}" -type f -perm 755 -exec chmod 750 {} \;
