Fix comment in rules L68

--- a/stack/indexer/deb/debian/rules
+++ b/stack/indexer/deb/debian/rules
@@ -65,7 +65,7 @@ override_dh_install:
 		curl -o $(INDEXER_FILE) https://s3.amazonaws.com/warehouse.wazuh.com/stack/indexer/$(INDEXER_FILE)
 		tar -zvxf $(INDEXER_FILE)
 
-		# copy to target
+		# Copy to the target
 		mkdir -p $(TARGET_DIR)$(INSTALLATION_DIR)
 		mkdir -p $(TARGET_DIR)$(CONFIG_DIR)
 		mkdir -p $(TARGET_DIR)$(LIB_DIR)
