--- a/dashboards/deb/debian/control
+++ b/dashboards/deb/debian/control
@@ -2,7 +2,7 @@ Source: wazuh-dashboards
 Section: admin
 Priority: extra
 Maintainer: Wazuh, Inc <info@wazuh.com>
-Build-Depends: debhelper (>= 9), tar, curl, libcap2-bin
+Build-Depends: debhelper (>= 9), libcap2-bin
 Standards-Version: 4.0.0
 Homepage: https://www.wazuh.com
 
