--- a/unattended_installer/config/certificate/config.yml
+++ b/unattended_installer/config/certificate/config.yml
@@ -16,7 +16,7 @@ nodes:
     # ip: <wazuh-manager-ip>
     # node_type: worker
 
-  # Wazuh dashboard node
-  dashboard:
-    name: <dashboard-node-name>
-    ip: <dashboard-node-ip>
+  # Wazuh dashboards node
+  dashboards:
+    name: <dashboards-node-name>
+    ip: <dashboards-node-ip>
