--- a/unattended_installer/config/dashboards/dashboards_unattended.yml
+++ b/unattended_installer/config/dashboards/dashboards_unattended.yml
@@ -1,3 +1,5 @@
+server.host: 0.0.0.0
+opensearch.hosts: https://127.0.0.1:9700
 server.port: 443
 opensearch.ssl.verificationMode: certificate
 opensearch.username: kibanaserver
@@ -6,7 +8,8 @@ opensearch.requestHeadersWhitelist: ["securitytenant","Authorization"]
 opensearch_security.multitenancy.enabled: true
 opensearch_security.readonly_mode.roles: ["kibana_read_only"]
 server.ssl.enabled: true
-server.ssl.key: "/etc/wazuh-dashboards/certs/dashboard-key.pem"
-server.ssl.certificate: "/etc/wazuh-dashboards/certs/dashboard.pem"
+server.ssl.key: "/etc/wazuh-dashboards/certs/dashboards-key.pem"
+server.ssl.certificate: "/etc/wazuh-dashboards/certs/dashboards.pem"
 opensearch.ssl.certificateAuthorities: ["/etc/wazuh-dashboards/certs/root-ca.pem"]
 server.defaultRoute: /app/wazuh?security_tenant=global
+
