--- a/unattended_installer/config/filebeat/filebeat_unattended.yml
+++ b/unattended_installer/config/filebeat/filebeat_unattended.yml
@@ -1,5 +1,5 @@
 # Wazuh - Filebeat configuration file
-output.opensearch.hosts:
+output.elasticsearch.hosts:
         - 127.0.0.1:9700
 #        - <elasticsearch_ip_node_2>:9700 
 #        - <elasticsearch_ip_node_3>:9700
