--- a/unattended_installer/config/indexer/indexer_all_in_one.yml
+++ b/unattended_installer/config/indexer/indexer_all_in_one.yml
@@ -22,11 +22,11 @@ plugins.security.ssl.transport.resolve_hostname: false
 
 plugins.security.audit.type: internal_opensearch
 plugins.security.authcz.admin_dn:
-- "CN=admin,OU=Docu,O=Wazuh,L=California,C=US"
+- "CN=admin,OU=Wazuh,O=Wazuh,L=California,C=US"
 plugins.security.check_snapshot_restore_write_privileges: true
 plugins.security.enable_snapshot_restore_privilege: true
 plugins.security.nodes_dn:
-- "CN=indexer,OU=Docu,O=Wazuh,L=California,C=US"
+- "CN=indexer,OU=Wazuh,O=Wazuh,L=California,C=US"
 plugins.security.restapi.roles_enabled:
 - "all_access"
 - "security_rest_api_access"
