--- a/unattended_installer/config/searchguard/multi-node/search-guard.yml
+++ b/unattended_installer/config/searchguard/multi-node/search-guard.yml
@@ -1,7 +1,7 @@
 # Self-signed certificate authority
 ca:
    root:
-      dn: CN=elasticsearch,OU=Docu,O=Wazuh,L=California,C=US
+      dn: CN=elasticsearch,OU=Wazuh,O=Wazuh,L=California,C=US
       keysize: 2048
       validityDays: 3650
       pkPassword: none
@@ -19,26 +19,26 @@ defaults:
 # Nodes certificates
 nodes:
   - name: node-1
-    dn: CN=node-1,OU=Docu,O=Wazuh,L=California,C=US
+    dn: CN=node-1,OU=Wazuh,O=Wazuh,L=California,C=US
     ip: 
       - <elasticsearch_1_IP>
   - name: node-2
-    dn: CN=node-2,OU=Docu,O=Wazuh,L=California,C=US
+    dn: CN=node-2,OU=Wazuh,O=Wazuh,L=California,C=US
     ip: 
       - <elasticsearch_2_IP>
   - name: node-3
-    dn: CN=node-3,OU=Docu,O=Wazuh,L=California,C=US
+    dn: CN=node-3,OU=Wazuh,O=Wazuh,L=California,C=US
     ip:
       - <elasticsearch_3_IP>
   - name: kibana
-    dn: CN=kibana,OU=Docu,O=Wazuh,L=California,C=US      
+    dn: CN=kibana,OU=Wazuh,O=Wazuh,L=California,C=US      
     ip:
       - <kibana_ip>      
 
 # Clients certificates
 clients:
   - name: admin
-    dn: CN=admin,OU=Docu,O=Wazuh,L=California,C=US
+    dn: CN=admin,OU=Wazuh,O=Wazuh,L=California,C=US
     admin: true
   - name: filebeat
-    dn: CN=filebeat,OU=Docu,O=Wazuh,L=California,C=US  
+    dn: CN=filebeat,OU=Wazuh,O=Wazuh,L=California,C=US  
