--- a/unattended_installer/config/searchguard/single-node/search-guard-multi-node.yml
+++ b/unattended_installer/config/searchguard/single-node/search-guard-multi-node.yml
@@ -1,7 +1,7 @@
 # Self-signed certificate authority
 ca:
    root:
-      dn: CN=elasticsearch,OU=Docu,O=Wazuh,L=California,C=US
+      dn: CN=elasticsearch,OU=Wazuh,O=Wazuh,L=California,C=US
       keysize: 2048
       validityDays: 3650
       pkPassword: none
@@ -17,21 +17,21 @@ defaults:
 # Nodes certificates
 nodes:
   - name: elasticsearch
-    dn: CN=node-1,OU=Docu,O=Wazuh,L=California,C=US
+    dn: CN=node-1,OU=Wazuh,O=Wazuh,L=California,C=US
     ip: 
       - <elasticsearch_IP>
   - name: kibana
-    dn: CN=kibana,OU=Docu,O=Wazuh,L=California,C=US     
+    dn: CN=kibana,OU=Wazuh,O=Wazuh,L=California,C=US     
     ip:
       - <kibana_ip>                  
 
 # Clients certificates
 clients:
   - name: admin
-    dn: CN=admin,OU=Docu,O=Wazuh,L=California,C=US
+    dn: CN=admin,OU=Wazuh,O=Wazuh,L=California,C=US
     admin: true
   - name: filebeat-1
-    dn: CN=filebeat-1,OU=Docu,O=Wazuh,L=California,C=US
+    dn: CN=filebeat-1,OU=Wazuh,O=Wazuh,L=California,C=US
   - name: filebeat-2
-    dn: CN=filebeat-2,OU=Docu,O=Wazuh,L=California,C=US  
+    dn: CN=filebeat-2,OU=Wazuh,O=Wazuh,L=California,C=US  
         
