--- a/stack/dashboards/deb/debian/rules
+++ b/stack/dashboards/deb/debian/rules
@@ -11,7 +11,7 @@
 # build-arch and build-indep targets by Bill Allombert 2001
 #
 # Modified by Wazuh 
-# Copyright (C) 2015-2022, Wazuh Inc.
+# Copyright (C) 2021, Wazuh Inc.
 #
 # This program is a free software; you can redistribute it
 # and/or modify it under the terms of the GNU General Public
