--- a/unattended_installer/config/indexer/indexer_unattended_distributed.yml
+++ b/unattended_installer/config/indexer/indexer_unattended_distributed.yml
@@ -2,7 +2,7 @@ node.master: true
 node.data: true
 node.ingest: true
 
-cluster.name: wazuh-cluster
+cluster.name: wazuh-indexer-cluster
 cluster.routing.allocation.disk.threshold_enabled: false
 
 http.port: 9700-9799
