--- a/unattended_installer/config/dashboards/dashboards_unattended.yml
+++ b/unattended_installer/config/dashboards/dashboards_unattended.yml
@@ -11,5 +11,5 @@ server.ssl.enabled: true
 server.ssl.key: "/etc/wazuh-dashboards/certs/dashboards-key.pem"
 server.ssl.certificate: "/etc/wazuh-dashboards/certs/dashboards.pem"
 opensearch.ssl.certificateAuthorities: ["/etc/wazuh-dashboards/certs/root-ca.pem"]
-server.defaultRoute: /app/wazuh?security_tenant=global
-
+uiSettings.overrides.defaultRoute: /app/wazuh?security_tenant=global
+logging.dest: "/var/log/wazuh-dashboards/wazuh-dashboards.log"
