Fixed pytests tests
Signed-off-by: verdx <verdx@riseup.net>

--- a/tests/unattended/install/pytest.ini
+++ b/tests/unattended/install/pytest.ini
@@ -5,6 +5,6 @@ markers =
     wazuh: tests to be executed on Wazuh hosts (does not include wazuh-clusterd test).
     wazuh_cluster: test for wazuh-clusterd it is meant to be executed on the master node if a wazuh cluster is configured.
     wazuh_worker: test for wazuh cluster worker nodes. It is meant to be executed on the worker nodes.
-    elastic: tests to be executed on Elastic hosts.
-    elastic_cluster: tests to be executed on Elastic hosts on distributed installations.
-    kibana: tests to be executed on Kibana hosts.
+    indexer: tests to be executed on Wazuh Indexer hosts.
+    indexer_cluster: tests to be executed on Wazuh Indexer hosts on distributed installations.
+    dashboards: tests to be executed on Wazuh Dashboards hosts.
