Step two, added generate_base and included fixes on docker and builder script

--- a/stack/indexer/base/docker/Dockerfile
+++ b/stack/indexer/base/docker/Dockerfile
@@ -2,14 +2,14 @@ FROM rockylinux:8.5
 
 # Install all the necessary tools
 RUN yum clean all && yum update -y
-RUN yum install -y
+RUN yum install -y \
     findutils \
     git \
     java-11-openjdk-devel
 
 # Add the script
-ADD generate_base.sh /usr/local/bin/generate_base
-RUN chmod +x /usr/local/bin/generate_base
+ADD builder.sh /usr/local/bin/builder
+RUN chmod +x /usr/local/bin/builder
 
 # Set the entrypoint
-ENTRYPOINT ["/usr/local/bin/generate_base"]
+ENTRYPOINT ["/usr/local/bin/builder"]
