--- a/stack/dashboards/base/files/etc/dashboards.yml
+++ b/stack/dashboards/base/files/etc/dashboards.yml
@@ -2,8 +2,8 @@ server.host: 0.0.0.0
 server.port: 443
 opensearch.hosts: https://localhost:9700
 opensearch.ssl.verificationMode: certificate
-opensearch.username: kibanaserver
-opensearch.password: kibanaserver
+#opensearch.username: 
+#opensearch.password: 
 opensearch.requestHeadersWhitelist: ["securitytenant","Authorization"]
 opensearch_security.multitenancy.enabled: true
 opensearch_security.readonly_mode.roles: ["kibana_read_only"]
