--- a/stack/dashboard/deb/debian/rules
+++ b/stack/dashboard/deb/debian/rules
@@ -24,14 +24,14 @@ export DH_VERBOSE=1
 # This has to be exported to make some magic below work.
 export DH_OPTIONS
 
-export TARGET_DIR=${CURDIR}/debian/wazuh-dashboards
-export NAME=wazuh-dashboards
+export TARGET_DIR=${CURDIR}/debian/wazuh-dashboard
+export NAME=wazuh-dashboard
 export CONFIG_DIR=/etc/${NAME}
 export INSTALLATION_DIR=$(INSTALLATION_DIR)
 export LOG_DIR=/var/log/${NAME}
 export USER=${NAME}
 export GROUP=${NAME}
-export DASHBOARD_FILE=wazuh-dashboards-base-$(BASE_VERSION)-linux-x64.tar.xz
+export DASHBOARD_FILE=wazuh-dashboard-base-$(BASE_VERSION)-linux-x64.tar.xz
 
 # -----------------------------------------------------------------------------
 
@@ -56,7 +56,7 @@ override_dh_install:
 	if [ "$(BASE)" = "s3" ]; then \
 		curl -kOL https://s3.amazonaws.com/warehouse.wazuh.com/stack/dashboard/$(DASHBOARD_FILE) ;\
 	else \
-		cp /root/output/wazuh-dashboards-base-$(BASE_VERSION)-linux-x64.tar.xz ./ ;\
+		cp /root/output/wazuh-dashboard-base-$(BASE_VERSION)-linux-x64.tar.xz ./ ;\
 	fi
 	
 
@@ -70,9 +70,9 @@ override_dh_install:
 	mkdir -p $(TARGET_DIR)/etc/systemd/system
 	mkdir -p $(TARGET_DIR)/etc/default
 
-	cp wazuh-dashboards-base/etc/node.options $(TARGET_DIR)$(CONFIG_DIR)
-	cp wazuh-dashboards-base/etc/dashboards.yml $(TARGET_DIR)$(CONFIG_DIR)
-	mv wazuh-dashboards-base/* $(TARGET_DIR)$(INSTALLATION_DIR)
+	cp wazuh-dashboard-base/etc/node.options $(TARGET_DIR)$(CONFIG_DIR)
+	cp wazuh-dashboard-base/etc/dashboard.yml $(TARGET_DIR)$(CONFIG_DIR)
+	mv wazuh-dashboard-base/* $(TARGET_DIR)$(INSTALLATION_DIR)
 
 	cp $(TARGET_DIR)$(INSTALLATION_DIR)/etc/custom_welcome/template.js.hbs $(TARGET_DIR)$(INSTALLATION_DIR)/src/legacy/ui/ui_render/bootstrap/template.js.hbs
 	cp $(TARGET_DIR)$(INSTALLATION_DIR)/etc/custom_welcome/light_theme.style.css $(TARGET_DIR)$(INSTALLATION_DIR)/src/core/server/core_app/assets/legacy_light_theme.css
@@ -88,12 +88,12 @@ override_dh_install:
 	mkdir -p $(TARGET_DIR)$(INSTALLATION_DIR)/config
 	cp $(TARGET_DIR)$(INSTALLATION_DIR)/etc/secret $(TARGET_DIR)$(INSTALLATION_DIR)/config/secret
 
-	cp $(TARGET_DIR)$(INSTALLATION_DIR)/etc/services/wazuh-dashboards.service $(TARGET_DIR)/etc/systemd/system/wazuh-dashboards.service 
-	cp $(TARGET_DIR)$(INSTALLATION_DIR)/etc/services/wazuh-dashboards $(TARGET_DIR)/etc/systemd/system/$(NAME)
+	cp $(TARGET_DIR)$(INSTALLATION_DIR)/etc/services/wazuh-dashboard.service $(TARGET_DIR)/etc/systemd/system/wazuh-dashboard.service 
+	cp $(TARGET_DIR)$(INSTALLATION_DIR)/etc/services/wazuh-dashboard $(TARGET_DIR)/etc/systemd/system/$(NAME)
 	cp $(TARGET_DIR)$(INSTALLATION_DIR)/etc/services/default $(TARGET_DIR)/etc/default/$(NAME)
 
 	chmod 644 $(TARGET_DIR)/etc/systemd/system/$(NAME)
-	chmod 644 $(TARGET_DIR)/etc/systemd/system/wazuh-dashboards.service 
+	chmod 644 $(TARGET_DIR)/etc/systemd/system/wazuh-dashboard.service 
 	chmod 644 $(TARGET_DIR)/etc/default/$(NAME)
 
 	rm -rf $(TARGET_DIR)$(INSTALLATION_DIR)/etc
@@ -102,8 +102,8 @@ override_dh_install:
 
 	tar -xf demo-certs.tar.gz
 
-	cp certs/demo-dashboard.pem $(TARGET_DIR)$(CONFIG_DIR)/certs/demo-dashboards.pem
-	cp certs/demo-dashboard-key.pem $(TARGET_DIR)$(CONFIG_DIR)/certs/demo-dashboards-key.pem
+	cp certs/demo-dashboard.pem $(TARGET_DIR)$(CONFIG_DIR)/certs/demo-dashboard.pem
+	cp certs/demo-dashboard-key.pem $(TARGET_DIR)$(CONFIG_DIR)/certs/demo-dashboard-key.pem
 	cp certs/root-ca.pem $(TARGET_DIR)$(CONFIG_DIR)/certs/root-ca.pem
 	chmod 644 $(TARGET_DIR)$(CONFIG_DIR)/certs/*
 
@@ -111,7 +111,7 @@ override_dh_install:
 
 	chown -R $(USER):$(GROUP) $(TARGET_DIR)$(INSTALLATION_DIR)
 	chown -R $(USER):$(GROUP) $(TARGET_DIR)$(CONFIG_DIR)
-	chown $(USER):$(GROUP) $(TARGET_DIR)/etc/systemd/system/wazuh-dashboards.service
+	chown $(USER):$(GROUP) $(TARGET_DIR)/etc/systemd/system/wazuh-dashboard.service
 	chown $(USER):$(GROUP) $(TARGET_DIR)/etc/systemd/system/$(NAME)
 	chown $(USER):$(GROUP) $(TARGET_DIR)/etc/default/$(NAME)
 
@@ -127,13 +127,13 @@ override_dh_fixperms:
 	chown -R "$(NAME)":"$(NAME)" "$(TARGET_DIR)$(INSTALLATION_DIR)"
 	chown -R "$(NAME)":"$(NAME)" $(TARGET_DIR)/etc/default/"$(NAME)"
 	chown -R "$(NAME)":"$(NAME)" $(TARGET_DIR)/etc/systemd/system/"$(NAME)"
-	chmod 750 $(TARGET_DIR)/etc/systemd/system/wazuh-dashboards
-	chmod 750 $(TARGET_DIR)/etc/default/wazuh-dashboards
-	chmod 640 "$(TARGET_DIR)$(CONFIG_DIR)"/dashboards.yml
+	chmod 750 $(TARGET_DIR)/etc/systemd/system/wazuh-dashboard
+	chmod 750 $(TARGET_DIR)/etc/default/wazuh-dashboard
+	chmod 640 "$(TARGET_DIR)$(CONFIG_DIR)"/dashboard.yml
 	chmod 750 "$(TARGET_DIR)$(CONFIG_DIR)"/certs
 	chmod 400 "$(TARGET_DIR)$(CONFIG_DIR)"/certs/*
 	chmod 640 "$(TARGET_DIR)$(CONFIG_DIR)"/node.options
-	chmod 640 $(TARGET_DIR)/etc/systemd/system/wazuh-dashboards.service
+	chmod 640 $(TARGET_DIR)/etc/systemd/system/wazuh-dashboard.service
 	find "$(TARGET_DIR)$(INSTALLATION_DIR)" -type d -exec chmod 750 {} \;
 	find "$(TARGET_DIR)$(INSTALLATION_DIR)" -type f -perm 644 -exec chmod 640 {} \;
 	find "$(TARGET_DIR)$(INSTALLATION_DIR)" -type f -perm 755 -exec chmod 750 {} \;
