--- a/stack/indexer/deb/debian/rules
+++ b/stack/indexer/deb/debian/rules
@@ -130,11 +130,14 @@ override_dh_install:
 # -----------------------------------------------------------------------------
 
 override_dh_fixperms:
-	dh_fixperms
+
 	# Set files permissions
 	chmod 750 $(TARGET_DIR)$(CONFIG_DIR)
+	chown -R $(USER):$(GROUP) $(TARGET_DIR)$(CONFIG_DIR)
 	chmod 750 $(TARGET_DIR)$(LIB_DIR)
+	chown -R $(USER):$(GROUP) $(TARGET_DIR)$(LIB_DIR)
 	chmod 750 $(TARGET_DIR)$(LOG_DIR)
+	chown -R $(USER):$(GROUP) $(TARGET_DIR)$(LOG_DIR)
 
 	chmod 660 $(TARGET_DIR)/etc/default/$(NAME)
 	chown root:$(GROUP) $(TARGET_DIR)/etc/default/$(NAME)
