Fix wazuh-dashboards to wazuh-dashboard

--- a/unattended_installer/config/certificate/config.yml
+++ b/unattended_installer/config/certificate/config.yml
@@ -19,6 +19,6 @@ nodes:
     # node_type: worker
 
   # Wazuh dashboards node
-  dashboards:
-    name: dashboards
-    ip: <dashboards-node-ip>
+  dashboard:
+    name: dashboard
+    ip: <dashboard-node-ip>
