Fix wazuh-dashboards to wazuh-dashboard in yml files

--- a/unattended_installer/config/certificate/config.yml
+++ b/unattended_installer/config/certificate/config.yml
@@ -18,7 +18,7 @@ nodes:
     # ip: <wazuh-manager-ip>
     # node_type: worker
 
-  # Wazuh dashboards node
+  # Wazuh dashboard node
   dashboard:
     name: dashboard
     ip: <dashboard-node-ip>
