Changed dashboards for dashboard in unattended pytest

--- a/tests/unattended/install/pytest.ini
+++ b/tests/unattended/install/pytest.ini
@@ -7,4 +7,4 @@ markers =
     wazuh_worker: test for wazuh cluster worker nodes. It is meant to be executed on the worker nodes.
     indexer: tests to be executed on Wazuh Indexer hosts.
     indexer_cluster: tests to be executed on Wazuh Indexer hosts on distributed installations.
-    dashboards: tests to be executed on Wazuh Dashboards hosts.
+    dashboard: tests to be executed on Wazuh Dashboard hosts.
