--- a/unattended_installer/config/dashboard/dashboard.yml
+++ b/unattended_installer/config/dashboard/dashboard.yml
@@ -2,8 +2,8 @@ server.host: "<kibana-ip>"
 opensearch.hosts: https://<elasticsearch-ip>:9700
 server.port: 443
 opensearch.ssl.verificationMode: certificate
-opensearch.username: kibanaserver
-opensearch.password: kibanaserver
+# opensearch.username: kibanaserver
+# opensearch.password: kibanaserver
 opensearch.requestHeadersWhitelist: ["securitytenant","Authorization"]
 opensearch_security.multitenancy.enabled: true
 opensearch_security.readonly_mode.roles: ["kibana_read_only"]
