--- a/unattended_installer/config/dashboard/dashboard_unattended_distributed.yml
+++ b/unattended_installer/config/dashboard/dashboard_unattended_distributed.yml
@@ -1,7 +1,7 @@
 server.port: 443
 opensearch.ssl.verificationMode: certificate
-opensearch.username: kibanaserver
-opensearch.password: kibanaserver
+# opensearch.username: kibanaserver
+# opensearch.password: kibanaserver
 opensearch.requestHeadersWhitelist: ["securitytenant","Authorization"]
 opensearch_security.multitenancy.enabled: true
 opensearch_security.readonly_mode.roles: ["kibana_read_only"]
